// Copyright (c) 2016 Red Hat, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
// implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "common.proto";

package oaktree;

message Image {
  CloudRegion cloud_region = 1;
  string id = 2;
  string name = 3;
  uint32 min_ram = 4;
  uint64 min_disk = 5;
  uint64 size = 6;
  uint64 virtual_size = 7;  // enum?
  string container_format = 8;  // enum?
  string disk_format = 9;
  string checksum = 10;
  string created_at = 11;
  string updated_at = 12;
  string owner = 13;
  bool is_public = 14;  // visibility=public - fix in shade
  bool is_protected = 15;
  enum Status {
    active = 0;
    queued = 1;
    saving = 2;
    deleted = 3;
    killed = 4;
    pending_delete = 5;
    deactivated = 6;
  }
  Status status = 16;
  repeated string tags = 17;
  map<string, string> properties = 99;
}

message ImageList {
  repeated Image images = 1;
}
